# repo

./: .gitignore  Account.md  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci_cd.yml
projects/devops/: .env  .npmrc  index.html  tsconfig.tsbuildinfo  unocss.config.ts
projects/devops/src/: App.tsx  main.tsx  shime.d.ts  vite-env.d.ts
projects/devops/src/components/404/: index.tsx
projects/devops/src/components/Icons/: logo.tsx
projects/devops/src/components/SideNav/: index.tsx  staticNav.ts
projects/devops/src/features/counter/: slice.ts
projects/devops/src/features/homePage/: index.tsx
projects/devops/src/features/login/: api.ts
projects/devops/src/stores/: getters.ts  index.ts  slice_common.ts
projects/docs/: package.json
projects/learn/: package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
projects/learn-next/: package.json  tsconfig.json
projects/learn/src/apis/: fetch.ts
projects/learn/src/stores/: slice_progress.ts
projects/next-template/: next.config.js  package.json  tsconfig.json
projects/next-ui/: package.json  tailwind.config.js  tsconfig.json
projects/todo/: .env.production  next.config.js  package.json  tailwind.config.js  tsconfig.json
projects/todo/src/app/: error.tsx  global-error.tsx  layout.tsx  loading.tsx  page.tsx
projects/web/: package.json
projects/web/pages/: index.tsx
projects/web/pages/posts/: post1.tsx  post2.tsx  post3.tsx
projects/web/utils/: getMd.js
services/auth/: Cargo.toml
services/auth/src/: main.rs
(+24 files in other folders)
