[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.10", features = ["headers"]}
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }

serde_json = "1.0.94"
serde = { version = "1.0.155", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

rand = "0.8.5"
http = "0.2.9"
oauth2 = "4.3.0"
headers = "0.3.8"
async-session = "3.0.0"
reqwest = { version = "*", default-features = false, features = [
  "rustls-tls",
  "json",
] }
